--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
-    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <script defer src="https://use.fontawesome.com/releases/v5.0.8/js/all.js"></script>
     <!--
       Notice the use of %PUBLIC_URL% in the tag above.
       It will be replaced with the URL of the `public` folder during the build.
@@ -16,7 +16,28 @@
     -->
     <title>Nehal Hasnayeen</title>
   </head>
-  <body>
+  <body  class="bg-grey-lighter font-sans font-normal bg-no-repeat bg-cover bg-center bg-fixed" >
+    <div class="fixed bg-black opacity-50 w-full h-full" style="z-index:-1;"></div>
+
     <div id="root"></div>
+    <div class="flex flex-col justify-center items-center mb-2">
+		<div class=" text-white text-center text-sm p-2 bg-black opacity-75 rounded inline">
+			Photo by 
+			<a id="photographer" class="text-white no-underline font-semibold" href=""></a> on
+			<a class="text-white no-underline font-semibold" href="https://unsplash.com/">Unsplash</a>
+		</div>
+    </div>
+    <script>
+      (function (i, s, o, g, r, a, m) {
+      i['GoogleAnalyticsObject'] = r; i[r] = i[r] || function () {
+        (i[r].q = i[r].q || []).push(arguments)  
+    }, i[r].l = 1 * new Date(); a = s.createElement(o),
+        m = s.getElementsByTagName(o)[0]; a.async = 1; a.src = g; m.parentNode.insertBefore(a, m)
+      })(window, document, 'script', 'https://www.google-analytics.com/analytics.js', 'ga');
+
+      ga('create', 'UA-61716953-3', 'auto');
+      ga('send', 'pageview');
+
+    </script>
   </body>
 </html>
