--- a/public/index.html
+++ b/public/index.html
@@ -38,17 +38,9 @@
 
     <title>Nehal Hasnayeen</title>
   </head>
-  <body  class="bg-grey-lighter font-sans font-normal bg-no-repeat bg-cover bg-center bg-fixed" >
-    <div class="fixed bg-black opacity-65 w-full h-full" style="z-index:-1;"></div>
+  <body  class="bg-grey font-sans font-normal bg-center bg-fixed" >
 
     <div id="root"></div>
-    <footer class="flex flex-col justify-center items-center mb-2">
-      <div class=" text-white text-center text-sm p-2 bg-black opacity-75 rounded inline">
-        Photo by 
-        <a id="photographer" class="text-white no-underline font-semibold" href=""></a> on
-        <a class="text-white no-underline font-semibold" href="https://unsplash.com?utm_source=nehal_personal_website&utm_medium=referral">Unsplash</a>
-      </div>
-    </footer>
     <script>
       (function (i, s, o, g, r, a, m) {
       i['GoogleAnalyticsObject'] = r; i[r] = i[r] || function () {
